--- a/Klasifikace_emocí_v_textu.ipynb
+++ b/Klasifikace_emocí_v_textu.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "unB95zKeMNrH"
       },
@@ -94,7 +94,7 @@
         "id": "I1OZ_OA7khwK",
         "outputId": "12b3ac81-8d1a-4d37-bdf3-73d55ed8e335"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -430,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -757,7 +757,7 @@
         "id": "aKmxXBe0ZR_d",
         "outputId": "884ee483-cb53-43d9-cbc5-78f6ce5fdce6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1056,7 +1056,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1087,7 +1087,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1665,16 +1665,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# Vytvoření různých verzí předzpracovaného textu\n",
-        "df['text'] = df['text'].apply(clean_text)\n",
-        "\n",
-        "\n"
+        "df['text'] = df['text'].apply(clean_text)"
       ],
       "metadata": {
         "id": "KA-4g6ajaglq"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Neuronová síť pro klasifikaci textu**"
+      ],
+      "metadata": {
+        "id": "Jf7pA-yQlvYV"
+      }
     },
     {
       "cell_type": "code",
@@ -1923,7 +1929,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Predikce na testovacích datech pomocí trénovaného modelu:"
+        "**Predikce na testovacích datech pomocí trénovaného modelu:**"
       ],
       "metadata": {
         "id": "Ou4udDW6eTd6"
@@ -1955,7 +1961,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Classification report"
+        "**Clasifikation report**"
       ],
       "metadata": {
         "id": "ShOiWQhVdlR_"
@@ -2007,7 +2013,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Confusion Matrix"
+        "**Confusion Matrix**"
       ],
       "metadata": {
         "id": "TByqHlpid_o_"
@@ -2054,7 +2060,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Chybné predikce ze srovnání reálných a predikovaných tříd"
+        "**Chybné predikce ze srovnání reálných a predikovaných tříd**"
       ],
       "metadata": {
         "id": "fUkNnGExdEW4"
@@ -2124,7 +2130,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "ULožení trénovaného model (včetně architektury, vah a optimalizátoru) do souboru .keras"
+        "**ULožení trénovaného model (včetně architektury, vah a optimalizátoru) do souboru .keras**"
       ],
       "metadata": {
         "id": "nz4OumSIid-L"
