--- a/Klasifikace_emocí_v_textu.ipynb
+++ b/Klasifikace_emocí_v_textu.ipynb
@@ -78,37 +78,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "#  Import knihoven pro zpracování textu\n",
-        "import nltk\n",
-        "nltk.download('stopwords', quiet=True)\n",
-        "nltk.download('wordnet', quiet=True)\n",
-        "nltk.download('punkt', quiet=True)\n",
-        "nltk.download('omw-1.4', quiet=True)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "I1OZ_OA7khwK",
-        "outputId": "12b3ac81-8d1a-4d37-bdf3-73d55ed8e335"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "cmkL7HXen-zF"
@@ -1496,7 +1465,7 @@
       "source": [
         "# Distribuce emocí\n",
         "print(\"=== DISTRIBUCE EMOCÍ ===\")\n",
-        "emotion_counts = df['emotion'].value_counts()\n",
+        "emotion_counts = df['emotion'].value_counts() # spočítá kolik výskytů má každá emoce\n",
         "print(emotion_counts)\n",
         "print(f\"\\nPočet unikátních emocí: {df['label'].nunique()}\")\n",
         "\n",
@@ -1510,7 +1479,7 @@
         "\n",
         "# Přidání hodnot na sloupce\n",
         "for i, v in enumerate(emotion_counts.values):\n",
-        "    plt.text(i, v + 1000, f'{v:,}', ha='center', va='bottom')\n",
+        "    plt.text(i, v + 1000, f'{v:,}', ha='center', va='bottom') #Tento řádek ti přidává čísla nad sloupce v grafu\n",
         "\n",
         "plt.tight_layout()\n",
         "plt.show()"
@@ -1565,7 +1534,7 @@
         "print(df[['text_length', 'word_count']].describe())\n",
         "\n",
         "# Vizualizace délky textů podle emocí\n",
-        "fig, axes = plt.subplots(1, 2, figsize=(15, 5))\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(15, 5)) # vykreslit dva samostatné grafy vedle sebe\n",
         "\n",
         "# Box plot pro délku textu\n",
         "df.boxplot(column='text_length', by='emotion', ax=axes[0])\n",
